Some style stuffs

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -5,4 +5,6 @@
 .msu-navbar-item {
     background-image: url("/public/assets/oak.png");
     background-size: contain;
+    margin-right: 5px;
+    color: black;
 }
